Updated whatsapp functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="/assets/logo.png" alt="Net Cafe Logo" class="logo">
+    <img src="assets/logo.png" alt="Net Cafe Logo" class="logo">
     <h1>Our Services</h1>
   </header>
 
@@ -19,7 +19,7 @@
       <p><strong>Price:</strong> ₹300</p>
       <p><strong>Processing Time:</strong> 7 days</p>
       <p><strong>Contact:</strong> <a href="mailto:simhadridf@gmail.com">simhadridf@gmail.com</a> | 
-        <a href="https://wa.me/7993131443">WhatsApp</a></p>
+        <a href="https://wa.me/7993131443?text=PAN%20Related">WhatsApp</a></p>
     </section>
 
     <section class="service">
@@ -28,7 +28,7 @@
       <p><strong>Price:</strong> ₹150</p>
       <p><strong>Processing Time:</strong> 15 days</p>
       <p><strong>Contact:</strong> <a href="mailto:simhadridf@gmail.com">simhadridf@gmail.com</a> | 
-        <a href="https://wa.me/7993131443">WhatsApp</a></p>
+        <a href="https://wa.me/7993131443?text=Aadhaar%20Name%20Change">WhatsApp</a></p>
     </section>
 
     <section class="service">
@@ -43,5 +43,7 @@
     <p>For more info, contact us: <a href="mailto:simhadridf@gmail.com">simhadridf@gmail.com</a> | Call: +911234567890</p>
     <p>&copy; 2025 Net Café Services</p>
   </footer>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
